change favicon icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=96&id=Mhl1TfJLdkh5&format=png" type="image/x-icon">
 
     <title>SALEH</title>
 </head>
@@ -130,7 +131,7 @@
     </div>
 
     <!--project section-->
-    <div  id="project">
+    <div id="project">
         <div id="project-container" class="container">
             <div class="heading">
                 <h4>Project</h4>
@@ -231,7 +232,7 @@
     </div>
 
     <!--footer section-->
-    <div  id="footer">
+    <div id="footer">
         <div id="footer-container">
             <div id="footer-content">
                 © 2026 , ferdous Zihad - All Right Reserved
